# Anchor-Pinocchio-Security-Template

./: .gitignore  ACmY1XMJy94VkriJN6o77UjDr1qRWBYe67JrMagY2Gto.json  Anchor.toml  Bumj5wt9dm2cK2o9ayeguHUtpnwnUFLQHaqUaewFegV2.json  Cargo.toml  README.md  SECURITY.md  SECURITY_PATTERNS_DEEP_DIVE.md  Ty2F8Q6C9m695p29DS6gMziMhGBhr4KPh7RkCp4p21a.json  build_out.txt  downgrade_deps.sh  fix_final_deps.sh  owjTGQ5tcsF9jiy1rDeiBxKj7fAcz3h8tbs9q9f5Awm.json  package-lock.json  package.json  pin_spl_versions.sh  upgrade_anchor.sh
programs/01_signer_check/: Cargo.toml  README.md
programs/01_signer_check/src/: lib.rs
programs/02_pda_sharing/: Cargo.toml
programs/02_pda_sharing/src/: lib.rs
programs/03_reinitialization/: Cargo.toml
programs/03_reinitialization/src/: lib.rs
programs/04_integer_overflow/: Cargo.toml
programs/04_integer_overflow/src/: lib.rs
programs/05_pinocchio_vs_anchor/: Cargo.toml  README.md
programs/05_pinocchio_vs_anchor/src/: lib.rs
programs/account_closing/: Cargo.toml  README.md
programs/account_closing/src/: lib.rs
programs/bump_seed_canonicalization/: Cargo.toml  README.md
programs/bump_seed_canonicalization/src/: lib.rs
programs/integer_overflow/: Cargo.toml  README.md
programs/integer_overflow/src/: lib.rs
programs/owner_checks/: Cargo.toml  README.md
programs/owner_checks/src/: lib.rs
programs/pda_sharing/: Cargo.toml  README.md
programs/pda_sharing/src/: lib.rs
programs/pinocchio_vs_anchor/: Cargo.toml
programs/pinocchio_vs_anchor/src/: lib.rs
programs/reinitialization/: Cargo.toml  README.md
programs/reinitialization/src/: lib.rs
programs/signer_check/: Cargo.toml  README.md
programs/signer_check/src/: lib.rs
programs/type_cosplay/: Cargo.toml  README.md
programs/type_cosplay/src/: lib.rs
tests/: 01_signer_check.ts  02_pda_sharing.ts  03_reinitialization.ts  04_integer_overflow.ts  05_pinocchio_vs_anchor.ts  06_account_closing.ts  07_bump_seed_canonicalization.ts  08_owner_checks.ts  09_type_cosplay.ts
