[package]
name = "account_closing"
version = "0.1.0"
description = "Lesson 6: Account Closing Vulnerabilities"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "account_closing"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.30.0"
