[package]
name = "bump_seed_canonicalization"
version = "0.1.0"
description = "Lesson 7: Bump Seed Canonicalization"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bump_seed_canonicalization"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.17.33"
blake3 = "1.3.1"
