[package]
name = "integer_overflow"
version = "0.1.0"
description = "Lesson 4: Integer Overflow / Underflow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "integer_overflow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.30.0"
