[package]
name = "owner_checks"
version = "0.1.0"
description = "Lesson 8: Owner Checks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "owner_checks"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.17.33"
blake3 = "1.3.1"
