[package]
name = "pda_sharing"
version = "0.1.0"
description = "Lesson 2: PDA Sharing & Seed Verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pda_sharing"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0" # Added missing dependency
