[package]
name = "pinocchio_vs_anchor"
version = "0.1.0"
description = "Lesson 5: Framework Comparison"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pinocchio_vs_anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.17.33"
blake3 = "1.3.1"
pinocchio = "0.6.0"
