[package]
name = "type_cosplay"
version = "0.1.0"
description = "Lesson 9: Type Cosplay / Account Discrimination"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "type_cosplay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
